<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@drawable/background1">

    <Button
        android:id="@+id/btnViewTrip"
        android:layout_width="399dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="306dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="23dp"
        android:text="@string/btnViewTrip"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddTrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddTrip"
        android:layout_width="399dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="21dp"
        android:text="@string/btnAddTrip"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnHttpPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewTrip" />

    <Button
        android:id="@+id/btnHttpPost"
        android:layout_width="399dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="28dp"
        android:text="@string/btnPost"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/resetpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddTrip" />

    <Button
        android:id="@+id/resetpassword"
        android:layout_width="399dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="162dp"
        android:textSize="16dp"
        android:text="Reset Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHttpPost" />

</androidx.constraintlayout.widget.ConstraintLayout>